<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_tooltip"
        android:orientation="vertical"
        android:padding="18dp">

        <TextView
            android:id="@+id/pair_tooltip_title"
            style="@style/OverlayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="14dp"
            android:text="@string/draw_with_partner"
            android:textSize="12sp" />

        <Button
            android:id="@+id/pair_tooltip_button"
            style="@style/ButtonText.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_anchor" />

        <Button
            android:id="@+id/join_room_button"
            style="@style/ButtonText.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/join_room"/>
    </LinearLayout>

    <View
        android:layout_width="48dp"
        android:layout_height="24dp"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/arrow_tooltip"
        android:layout_marginLeft="@dimen/tooltip_arrow_offset"/>

</LinearLayout>