<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arexperiments.justaline.view.PlaybackView">

    <TextureView
        android:id="@+id/video"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ripple_bg_borderless_oval"
        android:contentDescription="@string/content_description_back"
        android:padding="16dp"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/ripple_bg_borderless_oval"
        android:contentDescription="@string/content_description_share_video"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:clickable="false"
            android:duplicateParentState="true"
            android:src="@drawable/share_white"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="false"
            android:duplicateParentState="true"
            android:fontFamily="@font/cool_sans_medium"
            android:text="@string/playback_share" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="@drawable/ripple_bg_borderless_oval"
        android:contentDescription="@string/content_description_save_video"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:clickable="false"
            android:duplicateParentState="true"
            android:src="@drawable/save_white"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="false"
            android:duplicateParentState="true"
            android:fontFamily="@font/cool_sans_medium"
            android:text="@string/playback_save" />
    </LinearLayout>

</merge>