<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/pairview_message_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/full_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_pair_view"
            android:visibility="gone" />

        <TextView
            android:id="@+id/message"
            style="@style/OverlayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="62dp"
            android:layout_marginStart="62dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/pair_looking_for_partner" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@id/message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />


        <Button
            android:id="@+id/try_again"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:layout_marginTop="24dp"
            android:text="@string/try_again"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message_secondary" />

        <Button
            android:id="@+id/ok_button"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:layout_marginTop="24dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/ok"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/anchor_ready_button"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message">

            <TextView
                android:id="@+id/ready_text"
                style="@style/OverlayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/ready"
                app:layout_constraintEnd_toStartOf="@+id/arrow"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ready_text"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/message_secondary"
            style="@style/OverlayText"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="62dp"
            android:layout_marginStart="62dp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/message" />


        <ProgressBar
            android:id="@+id/pair_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:progressDrawable="@drawable/progressbar"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginEnd="62dp"
            android:layout_marginStart="62dp"
            android:layout_marginTop="24dp"
            android:indeterminate="false"
            app:layout_constraintTop_toBottomOf="@id/message"
            android:progressTint="@android:color/white"
            android:progressTintMode="src_in"/>
    </android.support.constraint.ConstraintLayout>

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_bg_borderless_oval"
        android:contentDescription="@string/content_description_back"
        android:padding="16dp"
        android:src="@drawable/ic_close"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</merge>